Fixing scrolling bug on mobile

--- a/mission-ceramics/src/styles/ProductDetails.scss
+++ b/mission-ceramics/src/styles/ProductDetails.scss
@@ -134,13 +134,17 @@
 /////////////////////////////////
 
 @media (max-width: 600px) {
+  .product-details {
+    overflow: hidden;
+  }
   .product-details-main {
+    position: absolute;
     display: block;
     text-align: center;
     width: 100vw;
     height: 100vh;
-    overflow-y: auto;
-    -webkit-overflow-scrolling:touch
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
   }
   .add-to-cart-btn-wrapper {
     text-align: center;
